feat: Add Chattanooga API integration with GitHub Actions sync
- Create Node.js sync script to pull products from Chattanooga Shooting API
- Set up GitHub Actions workflow to run every 4 hours
- Generate product JSON files for all shop categories
- Add product-loader.js for frontend display
- Create product card CSS styles
- Add comprehensive API_INTEGRATION.md documentation
- Update package.json with required dependencies (node-fetch, md5)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Modular Gunworks LLC Website",
   "main": "serve.js",
   "scripts": {
-    "start": "node serve.js"
+    "start": "node serve.js",
+    "sync": "node scripts/sync-chattanooga-api.js"
   },
   "keywords": [
     "firearms",
@@ -14,6 +15,8 @@
   "author": "Modular Gunworks LLC",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "node-fetch": "^2.7.0",
+    "md5": "^2.3.0"
   }
 }
