--- a/.github/workflows/sync-products.yml
+++ b/.github/workflows/sync-products.yml
@@ -32,4 +32,4 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add data/products/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-sync products from Chattanooga API" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-sync products from Chattanooga API" && git push origin main || true)
