--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Modular Gunworks LLC",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "nodemailer": "^7.0.12"
   }
 }
