Add admin product management system with real-time API updates
- Admin panel (admin.html) with login, search, filters, and product activation
- Admin API backend (scripts/admin-api.js) for managing active products
- Updated sync script to respect active.json selections
- Real-time product visibility control and page assignment
- CORS support and authentication with token system
- Comprehensive documentation in ADMIN_README.md
- npm scripts for easy startup (npm run admin, npm run sync)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Modular Gunworks LLC Website",
   "main": "serve.js",
   "scripts": {
-    "start": "node serve.js"
+    "start": "node serve.js",
+    "admin": "node scripts/admin-api.js",
+    "sync": "node scripts/sync-chattanooga-api.js",
+    "dev": "start cmd /k node serve.js && start cmd /k node scripts/admin-api.js"
   },
   "keywords": [
     "firearms",
@@ -14,6 +17,7 @@
   "author": "Modular Gunworks LLC",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.22.1",
     "nodemailer": "^7.0.12"
   }
