--- a/.github/workflows/sync-products.yml
+++ b/.github/workflows/sync-products.yml
@@ -53,11 +53,7 @@ jobs:
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           git add data/products/*.json
-          git commit -m "Auto-sync: Update product data from Chattanooga API
-
-- Synced at $(date -u +'%Y-%m-%d %H:%M:%S UTC')
-- Applied 3-layer filtering (brands → compliance → categorization)
-- Updated all category JSON files with current stock and pricing"
+          git commit -m "Auto-sync: Update product data from Chattanooga API at $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
           git push origin main
       
       - name: Log sync status
