Finalize Chattanooga categorization + image filter fixes

--- a/.github/workflows/sync-products.yml
+++ b/.github/workflows/sync-products.yml
@@ -59,4 +59,4 @@ jobs:
       - name: Log sync status
         run: |
           echo "✅ Product sync completed successfully"
-          echo "📊 Updated categories: Ammunition, Magazines, Reloading, Gun-Parts, Optics, Gear, Survival"
+          echo "📊 Updated categories: Ammunition, Magazines, Reloading, Gun-Parts, Optics, Gear, Outdoors"
